Skip promotion hints for unused resources.

If a resource is marked to request a promotion hint, but it isn't
used by any quad, then it might not be synced by GLRenderer before
promotion hints are sent.  In that case, locking the resource for
read will DCHECK.

This CL adds a check for unsynchronized resources, and skips sending
hints for those that aren't synced.

Bug: 788359
Change-Id: I54a2d4ced392a313a56f48a1b066ca3f2f62d152